test configuration fixe